reduce bg image size

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,6 +11,8 @@
     <meta name="theme-color" content="#27a9e1">
     <meta name="application-name" content="pollofeed">
     <link rel="shortcut icon" href="img/PF/logo.png">
+<!--    https://www.corewebvitals.io/pagespeed/preload-largest-contentful-paint-image-->
+    <link rel="preload" as="image" href="https://stream.pollofeed.com"/>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
