--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
     <meta name="theme-color" content="#27a9e1">
     <meta name="application-name" content="pollofeed">
-    <link rel="shortcut icon" href="img/logo.svg">
+    <link rel="shortcut icon" href="/img/logo.svg">
 <!--    https://www.corewebvitals.io/pagespeed/preload-largest-contentful-paint-image-->
     <link rel="preload" as="image" href="https://stream.pollofeed.com"/>
   </head>
